# pdf-parser-benchmark

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/: manifest.json
data/pdfs/: rename_pdfs.py
docs/: ACTION_ITEMS.md  AWESOME_RAG_ANALYSIS.md  INFRASTRUCTURE.md  PRD.md  PRD_pdf_parser_benchmark.md  TECHSPEC.md  TECHSPEC_pdf_parser_benchmark.md
src/: cache.py  chat.py  config.py  embed.py  ingest.py  rag.py  schema.py  web_search.py
src/api/: main.py  middleware.py  routes.py
tests/: conftest.py  test_api.py  test_ingest.py  test_rag.py
